apps/production/media/jellyfin/stateful-set.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jellyfin
spec:
  serviceName: jellyfin
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
        - name: jellyfin
          image: artifactory.local.hejsan.xyz/docker/linuxserver/jellyfin:10.10.6@sha256:075bc77361e6466f5cd546c9d97646428cc1f26d4b355991e8f66d0ffbc7c15a
          ports:
            - containerPort: 8096
              name: http
          volumeMounts:
            - name: jellyfin-config-pvc
              mountPath: /config
            - name: shared-storage
              mountPath: /mnt/storage
      volumes:
        - name: shared-storage
          persistentVolumeClaim:
            claimName: shared-nfs-pvc
  volumeClaimTemplates:
    - metadata:
        name: jellyfin-config-pvc
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: longhorn
        resources:
          requests:
            storage: 50Gi
