apps/production/media/jellyfin/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
spec:
  selector:
    app: jellyfin
  ports:
    - name: http
      targetPort: 8096
      port: 8096
